Parameterize OnError method.

This change is required to support following part of the
spec. "Let acceptedMethods be supportedMethods with all
identifiers removed that the user agent does not accept.
If the length of acceptedMethods is zero, then reject
acceptPromise with a NotSupportedError."

BUG=627705

Review-Url: https://codereview.chromium.org/2145553002
Cr-Commit-Position: refs/heads/master@{#406227}

Former-commit-id: e542d0af7a4908ec043b86d858bb9206a1c9c7f9