chrome/test/data/android/payments/free_shipping.js
@@ -35,11 +35,11 @@ function buy() {  // eslint-disable-line no-unused-vars
                     JSON.stringify(resp.details, undefined, 2));
               })
               .catch(function(error) {
-                print(error.message);
+                print(error);
               });
         })
         .catch(function(error) {
-          print(error.message);
+          print(error);
         });
   } catch (error) {
     print(error.message);
